fix(MWPW-157212): Link CTA accessibility issues | Minimum color contrast

--- a/less/components/consonant/theme.less
+++ b/less/components/consonant/theme.less
@@ -36,6 +36,8 @@
 @consonantBlue600: #1473e6;
 @consonantBlue700: #0d66d0;
 
+@accessibleBlueLink: #3b63fb;
+
 /* Red */
 
 @consonantRed400: #ec5b62;
@@ -81,6 +83,8 @@
     @consonantBlue500: #1473e6;
     @consonantBlue600: #0d66d0;
     @consonantBlue700: #095aba;
+
+    @accessibleBlueLink: #3b63fb;
 
     /* Red */
 
@@ -130,6 +134,8 @@
     @consonantBlue600: #4b9cf5;
     @consonantBlue700: #5aa9fa;
 
+    @accessibleBlueLink: #5da3f4;
+
     /* Red */
 
     @consonantRed400: #e34850;
@@ -177,6 +183,8 @@
     @consonantBlue500: #2680eb;
     @consonantBlue600: #378ef0;
     @consonantBlue700: #4b9cf5;
+
+    @accessibleBlueLink: #5da3f4;
 
     /* Red */
 
@@ -658,7 +666,7 @@
         /* consonant-LinkInfobit */
 
         .consonant-LinkInfobit {
-            color: @consonantBlue500;
+            color: @accessibleBlueLink;
 
             &:hover {
                 color: @consonantBlue600;
